tests/e2e/operator-restart/assert-operator-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-operator
  namespace: opentelemetry-operator-system
  ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: Deployment
      name: opentelemetry-operator-controller-manager
spec:
  egress:
    - ports:
        - port: 6443
          protocol: TCP
  ingress:
    - ports:
        - port: 9443
          protocol: TCP
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opentelemetry-operator
  policyTypes:
    - Ingress
    - Egress
